fixed errors in sign-up, enhanced the profile

--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
         <link rel="stylesheet" href="CSS Source/Templetes/Basic.css">
         <script src="JS Source/Templetes/Basic.js"></script>
+        <script>pre_body_load();</script>
     </head>
     <body>
         <header>
@@ -85,13 +86,17 @@
                     <!-- Place Your Code Here! for only content pages like about and display task.-->
                     <h3>Welcome, Visitors.</h3>
                     <p>
-                        This is the task management website of the school. You can <br/>
+                        This is the task management website of the school.<br/>
+                    </p>
                         <h4>For Teachers:</h4>
+                    <p>
                         You can sign-up your profile and activate it to start recieving tasks.
                         Ensure that the email is valid and type a strong password because of data security.
                         If you have any problem is your account try to contact the <a href="#Contacts">Principal</a> to schedule a session with the IT.
                         Please, try to turn-in the work in time and track all your tasks.<br/>
-                        <h4>For Visitors:</h4>
+                    </p>
+                    <h4>For Visitors:</h4>
+                    <p>
                         if you are seeking this website to enroll in the school, you should follow these steps:-
                         <ol>
                             <li>
@@ -172,10 +177,8 @@
         <div id="document-handler" class="not-used">
 
         </div>
+        <script>update_profile_image();</script>
+        <script>post_load()</script>
+
     </body>
 </html>
-<article>
-    <div>
-        
-    </div>
-</article>
