--- a/Sections/Account/ChangePassword.html
+++ b/Sections/Account/ChangePassword.html
@@ -6,11 +6,14 @@
         <title>
             School Task Assignment - Change Password
         </title>
-        <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
-        <link rel="stylesheet" href="CSS Source/Templetes/Basic.css">
-        <link rel="stylesheet" href="CSS Source/Profile_Settings.css">
-        <script src="JS Source/Templetes/Basic.js"></script>
-        <script src="JS Source/Profile_Settings.js"></script>
+        <link rel="icon" type="image/x-icon" href="../../Images/Icons/School.png">
+        <link rel="stylesheet" href="../../CSS Source/Templetes/Basic.css">
+        <link rel="stylesheet" href="../../CSS Source/Profile_Settings.css">
+        <script src="../../JS Source/Templetes/Basic.js"></script>
+        <script src="../../JS Source\Templetes\Recursive.js"></script>
+        <script src="../../JS Source/Profile_Settings.js"></script>
+        <script>pre_body_load();</script>
+
     </head>
     <body>
         <header>
@@ -24,7 +27,7 @@
             <ul>
                 <li>
                     <div>
-                        <img src="Images/Users/User/Profile.png" alt = "Profile Image" id="open-profile" class="pressable" onclick="handle_tap(this)">
+                        <img src="../../Images/Users/User/Profile.png" alt = "Profile Image" id="open-profile" class="pressable" onclick="handle_tap(this)">
                     </div>
                 </li>
                 <li >
@@ -33,7 +36,7 @@
                     </button>
                 </li>
                 <li>
-                    <button type="button" title="Open Tasks" id="open-tasks" class="current-page" onclick="handle_tap(this)">
+                    <button type="button" title="Open Tasks" id="open-tasks" class="" onclick="handle_tap(this)">
                         Tasks
                     </button>
                 </li>
@@ -64,7 +67,7 @@
                                 <button type="button" title="Search" id= "Search" onclick="handle_tap(this)">
                                     <label for="Search">
                                         <div>
-                                            <img src="Images/Icons/Search.png" alt="Search Icon"/>
+                                            <img src="../../Images/Icons/Search.png" alt="Search Icon"/>
                                         </div>
                                         <div>Search</div>
                                     </label>
@@ -109,7 +112,7 @@
                 </div>
             </article>
             <aside onclick="handle_tap(this)">
-                <img src="Images/Icons/right_arrow.png" alt="Right Arrow" onclick="show_hide_side()">
+                <img src="../../Images/Icons/right_arrow.png" alt="Right Arrow" onclick="show_hide_side()">
                 <div>
                     <h2> Announcements </h2>
                     <ul>
@@ -141,8 +144,8 @@
                         </ul>
                 </p>
                 <ul>
-                    <li><a href="Credits.pdf">Credits</a></li>
-                    <li><a href="LICENSE">License</a></li>
+                    <li><a href="../../Credits.pdf" target="_blank">Credits</a></li>
+                    <li><a href="../../LICENSE" target="_blank">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
                     
                 </ul>
@@ -152,5 +155,7 @@
 
         </div>
         <script>show_hide_side()</script>
+        <script>post_load();</script>
+
     </body>
 </html>
