--- a/Sections/Tasks/ViewTaskAdmin.html
+++ b/Sections/Tasks/ViewTaskAdmin.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="../../CSS Source/Templetes/Basic.css">
         <script src="../../JS Source/Templetes/Basic.js"></script>
         <script src="../../JS Source\Templetes\Recursive.js"></script>
+        <script>pre_body_load();</script>
     </head>
     <body>
         <header>
@@ -155,8 +156,8 @@
                         </ul>
                 </p>
                 <ul>
-                    <li><a href="../../Credits.pdf">Credits</a></li>
-                    <li><a href="../../LICENSE">License</a></li>
+                    <li><a href="../../Credits.pdf" target="_blank">Credits</a></li>
+                    <li><a href="../../LICENSE" target="_blank">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
                     
                 </ul>
@@ -166,5 +167,7 @@
 
         </div>
         <script>show_hide_side()</script>
+        <script>post_load();</script>
+
     </body>
 </html>
