--- a/Tasks.html
+++ b/Tasks.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
         <link rel="stylesheet" href="CSS Source/Templetes/Basic.css">
         <script src="JS Source/Templetes/Basic.js"></script>
+        <script>pre_body_load();</script>
     </head>
     <body>
         <header>
@@ -130,5 +131,8 @@
         </div>
         <script src="JS Source/Tasks/Basic.js"></script>
         <script>show_hide_side()</script>
+        <script>check_user()</script>
+        <script>post_load();</script>
+
     </body>
 </html>
