--- a/Templetes/Main.html
+++ b/Templetes/Main.html
@@ -26,7 +26,7 @@
                     </div>
                 </li>
                 <li >
-                    <button type="button" title="Open Home" id="open-home" class="current-page" onclick="handle_tap(this)">
+                    <button type="button" title="Open Home" id="open-home" class="" onclick="handle_tap(this)">
                         Home 
                     </button>
                 </li>
@@ -118,8 +118,8 @@
                         </ul>
                 </p>
                 <ul>
-                    <li><a href="Credits.pdf">Credits</a></li>
-                    <li><a href="LICENSE">License</a></li>
+                    <li><a href="Credits.pdf" target="_blank">Credits</a></li>
+                    <li><a href="LICENSE" target="_blank">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
                     
                 </ul>
@@ -128,5 +128,6 @@
         <div id="document-handler" class="not-used">
 
         </div>
+        <script>update_profile_image();</script>
     </body>
 </html>
