--- a/Sections/Account/Sign-in.html
+++ b/Sections/Account/Sign-in.html
@@ -12,6 +12,7 @@
         <script src="../../JS Source/Templetes/Basic.js"></script>
         <script src="../../JS Source\Templetes\Recursive.js"></script>
         <script src="../../JS Source/Profile_Settings.js"></script>
+        <script>pre_body_load();</script>
     </head>
     <body>
         <header>
@@ -34,7 +35,7 @@
                     </button>
                 </li>
                 <li>
-                    <button type="button" title="Open Tasks" id="open-tasks" class="current-page" onclick="handle_tap(this)">
+                    <button type="button" title="Open Tasks" id="open-tasks" class="" onclick="handle_tap(this)">
                         Tasks
                     </button>
                 </li>
@@ -91,15 +92,22 @@
                             <tbody>
                                 <tr>
                                     <td><label for ="user-name">UserName: </label></td>
-                                    <td><input type="text" id="user-name" name="user-name" autocomplete="username"></td>
+                                    <td><input type="text" id="user-name" name="user-name" autocomplete="username" required></td>
                                 </tr>
                                 <tr>
                                     <td><label for ="password">Password: </label></td>
-                                    <td><input type="password" id="password" name="password" autocomplete="password"></td>
+                                    <td><input type="password" id="password" name="password" autocomplete="password" required></td>
+                                </tr>
+                                <tr>
+                                    <input type="button" id="create-account" value="Create Account" onclick="profile_handle_buttons(this)">
+                                </tr>
+                                <tr>
+                                    <hr/>
                                 </tr>
                                 <tr>
                                     <input type="button" id="sign-in-button" value="Sign-In" onclick="profile_handle_buttons(this)">
                                 </tr>
+                                
                             </tbody>
                         </table>
                     </form>
@@ -138,8 +146,8 @@
                         </ul>
                 </p>
                 <ul>
-                    <li><a href="../../Credits.pdf">Credits</a></li>
-                    <li><a href="../../LICENSE">License</a></li>
+                    <li><a href="../../Credits.pdf" target="_blank">Credits</a></li>
+                    <li><a href="../../LICENSE" target="_blank">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
                     
                 </ul>
@@ -148,6 +156,6 @@
         <div id="document-handler" class="not-used">
 
         </div>
-        <script>show_hide_side()</script>
+        <script>post_load()</script>
     </body>
 </html>
