--- a/Templetes/Main.html
+++ b/Templetes/Main.html
@@ -9,6 +9,8 @@
         <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
         <link rel="stylesheet" href="CSS Source/Templetes/Basic.css">
         <script src="JS Source/Templetes/Basic.js"></script>
+        <script>pre_body_load();</script>
+
     </head>
     <body>
         <header>
@@ -128,6 +130,6 @@
         <div id="document-handler" class="not-used">
 
         </div>
-        <script>update_profile_image();</script>
+        <script>post_load();</script>
     </body>
 </html>
