--- a/Templetes/Nested Level 2 Main.html
+++ b/Templetes/Nested Level 2 Main.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="../../CSS Source/Templetes/Basic.css">
         <script src="../../JS Source/Templetes/Basic.js"></script>
         <script src="../../JS Source\Templetes\Recursive.js"></script>
+        <script>pre_body_load();</script>
+
     </head>
     <body>
         <header>
@@ -130,6 +132,6 @@
 
         </div>
         <script>show_hide_side()</script>
-        <script>update_profile_image();</script>
+        <script>post_load();</script>
     </body>
 </html>
